[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8", "wheel", "cmake>=3.10"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_file = "macposts/_version.py"

[tool.pytest.ini_options]
minversion = 6.0
required_plugins = ["nbval>=0.10.0"]
testpaths = ["tests", "examples"]
addopts = "--nbval"
