[build-system]
# 'cmake>=3.10' here may cause pip to try building the Python cmake package from source,
# which may cause the build to fail in the github workflow.
requires = ["setuptools>=64", "setuptools_scm>=8", "wheel", "cmake>=3.10"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_file = "macposts/_version.py"

[tool.pytest.ini_options]
minversion = 6.0
required_plugins = ["nbval>=0.10.0"]
testpaths = ["tests", "examples"]
addopts = "--nbval-lax"
