[metadata]
name = macposts
version = attr: macposts.__version__
description = Toolkit for transportation network modeling.
author = Wei Ma
author_email = lemma171@gmail.com
license = MIT
license_files =
    LICENSE
    lib/LIB-LICENSES
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering

[options]
packages = find:
python_requires = >=3.9
